# task-affinity-codes

./: .gitignore  Makefile  README.md  q
codes/: Makefile
codes/00_scripts/: interactive_session.sh  median.sh  run_do_bots_health.sh_smp  run_do_bots_mergesort.sh_smp  run_do_cg.sh  run_do_mergesort.sh  run_do_mergesort.sh_smp  run_do_numa_node_access_times.sh  run_do_strassen.sh  run_do_stream.sh_smp  run_scal_cg.sh_2s  run_scal_cg.sh_knl  run_scal_cg.sh_smp  run_scal_health.sh_2s  run_scal_health.sh_knl  run_scal_health.sh_smp  run_scal_merge.sh_2s  run_scal_merge.sh_knl  run_scal_merge.sh_smp  run_scal_stream.sh_2s  run_scal_stream.sh_knl  run_scal_stream.sh_smp  run_test_bots_mergesort.sh_smp  run_test_cg.sh  run_test_cg.sh_2s  run_test_cg.sh_smp  run_test_mergesort.sh  run_test_mergesort.sh_smp  run_test_strassen.sh  run_test_stream.sh  run_test_stream.sh_smp
codes/01_util/: no_huge_page_alloc.h
codes/bots/: CONTRIBUTING.md  Makefile  configure
codes/bots/common/: Makefile.common  bots.h  bots_main.c
codes/bots/config/: make.config
codes/bots/omp-tasks/: Makefile
codes/bots/run/: result_omp-tasks-domain.lowest.txt  result_omp-tasks.txt  run-strassen.sh  run.common  wrapper_str.sh
codes/cholesky/: Makefile  build.sh  ch_common.c  ch_common.h  ch_intel  ch_intel_aff  ch_intel_timing  ch_intel_timing_aff  cholesky.h  flags_intel.def  output.txt  run.sh  run_ddt.sh  timing.h
codes/mergesort/: Makefile  MergeSort.cpp  do.sh
codes/numa_node_access_times/: Makefile  do.sh  numa_node_access_times.c
codes/ompt_lib/: callback.h
codes/sparse_CG/: .gitignore  CMakeLists.txt  README  benchmark.rb  benchmark.yaml  cg_get_results.sh
codes/sparse_CG/CMake/: FindLikwid.cmake  FindLis.cmake  FindMKL.cmake  FindOpenACC.cmake
codes/sparse_CG/common/: def.cu  def.h  errorcheck.c  errorcheck.h  help.c  help.h  io.c  io.h  kernel.c  kernel.h  main.c  main.cu  output.c  output.h  solver.c  solver.h
codes/sparse_CG/cublas/: CMakeLists.txt  solver.cu
codes/sparse_CG/cuda/: CMakeLists.txt  solver.cu  solver.h  solver_niceTemplate.cu
codes/sparse_CG/cusp/: CMakeLists.txt  cg.cu
codes/sparse_CG/cusparse/: CMakeLists.txt  solver.c
codes/sparse_CG/dumpmtx/: CMakeLists.txt  main.c
codes/sparse_CG/lis/: CMakeLists.txt  main.c
codes/sparse_CG/mic/: CMakeLists.txt  io.c  io.h  main.c  solver.c  solver.h
codes/sparse_CG/mkl/: CMakeLists.txt  kernel.c  solver.h
codes/sparse_CG/openacc/: CMakeLists.txt
codes/sparse_CG/openmp/: CMakeLists.txt
codes/sparse_CG/serial/: CMakeLists.txt
codes/sparse_CG/tasking/: CMakeLists.txt  Makefile  do.sh  solver.c  solver.h
codes/sparse_CG/tools/: generateMatrix.cpp
codes/sparse_CG/viennacl/: CMakeLists.txt  main.cxx
codes/sparse_CG/viennacl/viennacl/: compressed_matrix.hpp  coordinate_matrix.hpp  matrix.hpp  scalar.hpp  vector.hpp
codes/sparse_CG/viennacl/viennacl/linalg/: direct_solve.hpp
codes/sparse_CG/viennacl/viennacl/ocl/: command_queue.hpp  device.hpp  enqueue.hpp  error.hpp  handle.hpp  kernel.hpp
codes/sparse_CG/viennacl/viennacl/tools/: tools.hpp
codes/stream/: #output_.txt#  #run_test.sh#  .nfs000000064e9587b9000020be  Errors.xlsx  Makefile  bdo.sh  bdo_2socket.sh  bdo_default.sh  bdo_inv.sh  bdo_long.sh  debug.sh  do.sh  excel_data.txt  output_.txt  output_domain.lowest.divn_none.12.txt  output_domain.lowest.fal_none.2.txt  output_domain.lowest.first1_first1.1.txt  output_domain.lowest.first_none.1.txt  output_domain.lowest.step_none.100.txt  output_rel___642100___lowest_wl___domain___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422000___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___64220010___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422001___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422002___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422003___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422004___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422005___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422006___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422007___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422008___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___6422009___lowest_wl___combined___first_page_of_first_affinity___first___THREADS-64.txt  output_rel___first___thread___first_page_of_first_affinity___first___THREADS-1.txt  output_rel___first___thread___first_page_of_first_affinity___first___THREADS-8.txt  output_rel___first___thread___first_page_of_first_affinity___majority___THREADS-1.txt  output_thread.lowest.divn_none.12.txt  output_thread.lowest.fal_none.2.txt  output_thread.lowest.first1_first1.1.txt  output_thread.lowest.first_none.1.txt  output_thread.lowest.step_none.100.txt  run_output_standard.txt  (+11 more)
codes/stream/2 Sockel/: output_corr_domain_rel___162000___lowest_wl___thread___first_page_of_first_affinity___first___THREADS-16.txt  output_corr_domain_rel___162100___lowest_wl___domain___first_page_of_first_affinity___first___THREADS-16.txt  output_rel.txt  (+6 more)
codes/streamf/: Makefile  do.sh  stream_task.f90
codes/task_affinity_eval/: script.py  setup.txt
codes/task_affinity_support/: task_affinity_support.c  task_affinity_support.h
documents/: 20180717_Commandline.pptx  Dokumentation.docx  LLVM OpenMP runtime.pptx  Task_Affinity_API v4.docx  ~$sk_Affinity_API v4.docx
documents/Dokumentation/: references.bib  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.tex
scripts/parse_affinity_results/: CMeasurement.py  CMetricsBase.py  CMetricsSTREAM.py  parse_results.py
scripts/task_affinity_eval/: script.py  setup.st  setup.txt  test.txt
(+152 files in other folders)
